syntax = "proto3";

package local;

message UnaryRequest { string msg = 1; }

message UnaryReply { string msg = 2; }

message RequestStreamRequest { string msg = 1; }
message RequestStreamReply { repeated string messages = 1; }

message ReplyStreamRequest {
  string msg = 1;
  uint32 count = 2;
}
message ReplyStreamReply { string msg = 1; }

message DuplexStreamRequest { string msg = 1; }
message DuplexStreamReply { string msg = 1; }

service LocalTestService {
  rpc Unary(UnaryRequest) returns (UnaryReply);
  rpc RequestStream(stream RequestStreamRequest) returns (RequestStreamReply);
  rpc ReplyStream(ReplyStreamRequest) returns (stream ReplyStreamReply);
  rpc DuplexStream(stream DuplexStreamRequest)
      returns (stream DuplexStreamReply);
}
